deleted some files

--- a/css/App.css
+++ b/css/App.css
@@ -51,7 +51,7 @@ border: linear-gradient(to left, #3f2b96, #a8c0ff); /* W3C, IE 10+/ Edge, Firefo
 }
 .Well
 {
-    margin-bottom: 135px;
+    margin-bottom: 175px;
     
     
 }
@@ -129,6 +129,7 @@ font-size: 60px;
     margin-top: 65px;
     text-align: center;
     margin-left: auto;
+    padding-bottom: 10px;
 
 }
 
@@ -179,7 +180,7 @@ label {
 .JosSide
 {
     /* background-color: #3A6EE8; */
-    height: 790px;
+    height: 740px;
     color: white;
     background: #a8c0ff;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to left, #3f2b96, #a8c0ff);  /* Chrome 10-25, Safari 5.1-6 */
@@ -288,7 +289,7 @@ label {
 
 
 
-@media(max-width:350px){
+@media(max-width:380px){
     
     
       img{
@@ -329,7 +330,7 @@ label {
     }
         .Well
 {
-    margin-bottom: 80px;
+    margin-bottom: 154px;
     padding: 12px;
     
     
@@ -339,10 +340,11 @@ label {
 {
     color:#ecf0f1;
     font-family: 'Raleway', sans-serif;
-    margin-bottom: 40px;
-    margin-top: 65px;
+    margin-bottom: 80px;
+    margin-top: 90px;
     text-align: center;
     margin-left: auto;
+    padding-bottom: 40px;
 
 }
    #noPros h1
